--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.17.0",
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
+    "mockjs": "^1.0.1-beta3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
